Fix css to align on left

--- a/pattern/css/style.css
+++ b/pattern/css/style.css
@@ -15,7 +15,7 @@ body {
 	padding: 0;
 	background-color: white;
 	font-size: 100%;
-	text-align: center;
+	text-align: left;
 }
 
 .box {
